--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   flutter_launcher_icons: ^0.9.2
   flutter_datetime_picker: ^1.5.1
   intl: ^0.17.0
-  sms_autofill: ^2.2.0
+  image_picker: ^0.8.4+5
 
 
 dev_dependencies:
