--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <application
         android:label="servolution"
+        android:requestLegacyExternalStorage="true"
         android:icon="@mipmap/launcher_icon">
 
        <activity
