--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   flutter_launcher_icons: ^0.9.2
   flutter_datetime_picker: ^1.5.1
   intl: ^0.17.0
-  image_picker: ^0.8.4+5
+  file_picker: ^4.4.0
 
 
 dev_dependencies:
