--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   flutter_datetime_picker: ^1.5.1
   intl: ^0.17.0
   file_picker: ^4.4.0
+  photo_view: ^0.13.0
+  flutter_downloader: ^1.7.2
 
 
 dev_dependencies:
