--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   chat_bubbles: ^1.1.0
   image_picker: ^0.8.4+9
   multi_image_picker2: ^5.0.02
+  dropdown_search: ^2.0.1
+  onesignal_flutter: ^3.2.8
 
 
 dev_dependencies:
